# -flack-first-app

./: LICENSE  README.md  app.py  database.py  package-lock.json  pyproject.toml  requirements.txt
templates/: 404.html  banner.html  footer.html  home.html  item.html  item2.html  nav.html  personpage.html
